--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+html, body, .wrapper, #content, #gameArea {
+	height: 100%;
+}
+
 body {
 	background-image: url("../images/background.jpg");
 	background-size: cover;
@@ -6,12 +10,11 @@ body {
 	background-position: center center;
 }
 
-
 #sideHdr, #characterHdr {
 	text-align: center;
 	margin-bottom: 40px;
 	color: white;
-	font-size: 4em;
+	font-size: 3em;
 }
 
 /* SIDE PROMPT*/
@@ -45,7 +48,7 @@ body {
 	margin: auto;
 	padding: 5px;
     text-align: center;
-    width: 160px;
+    width: 110px;
 }
 
 .rebel {
@@ -58,19 +61,32 @@ body {
 	color: white;
 }
 
-.possPlayer > p {
+.empire > p, .rebel > p {
 	margin: 5px auto 0px;
 }
 
 .playerImg {
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 }
 
 
 /* MAIN GAME AREA */
+#attackerDiv {
+	height: 30%;
+}
+
+#playArea {
+	height: 40%;
+}
+
+#defenderDiv {
+	height: 30%;
+}
+
 .gameHeader {
 	text-align: center;
 	color: white;
-	font-size: 3em;
+	font-size: 2.5em;
 }
+
