--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,3 +90,10 @@ body {
 	font-size: 2.5em;
 }
 
+#defPrompt {
+	color: white;
+	text-align: center;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	margin-top: 10%;
+}
+
