--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ body {
 	text-align: center;
 	margin-bottom: 40px;
 	color: white;
+	text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 3em;
 }
 
@@ -84,16 +85,14 @@ body {
 	height: 30%;
 }
 
-.gameHeader {
+.gameHeader, #defPrompt {
 	text-align: center;
 	color: white;
+	text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 2.5em;
 }
 
 #defPrompt {
-	color: white;
-	text-align: center;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	margin-top: 10%;
 }
 
