--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,8 +96,16 @@ body {
 	margin-top: 10%;
 }
 
+#attackBtnRow {
+	height: 25%;
+}
+
 #attackBtn {
-	margin: 1% auto 4%;
+	margin: auto;
 	padding: 4px 10px;
 	display: block;
+}
+
+#currentDefenderRow {
+	height: 75%;
 }
